Thay đổi hiển thị nút add/remove để người dùng dễ nhận biết hơn, thêm các thẻ meta

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,31 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffeded">
 
+  <!-- Meta tag -->
+  <!-- Primary Meta Tags -->
+  <title>Peach Toeic🍑</title>
+  <meta name="title" content="Peach Toeic🍑">
+  <meta name="description" content="Ứng dụng chinh phục 600 từ vựng TOEIC thiết yếu nhất miễn phí">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://thanhcanhit.github.io/peach-toeic/">
+  <meta property="og:title" content="Peach Toeic🍑">
+  <meta property="og:description" content="Ứng dụng chinh phục 600 từ vựng TOEIC thiết yếu nhất miễn phí">
+  <meta property="og:image" content="/public/assets/logo.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://thanhcanhit.github.io/peach-toeic/">
+  <meta property="twitter:title" content="Peach Toeic🍑">
+  <meta property="twitter:description" content="Ứng dụng chinh phục 600 từ vựng TOEIC thiết yếu nhất miễn phí">
+  <meta property="twitter:image" content="/public/assets/logo.png">
+
   <title>Peach Toeic</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-</body>
 
 </html>
