Sửa img meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
   <meta property="og:url" content="https://thanhcanhit.github.io/peach-toeic/">
   <meta property="og:title" content="Peach Toeic 🍑">
   <meta property="og:description" content="Ứng dụng chinh phục 600 từ vựng TOEIC thiết yếu nhất miễn phí">
-  <meta property="og:image" content="%PUBLIC_URL%/assets/logo.png">
+  <meta property="og:image" content="/logo.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://thanhcanhit.github.io/peach-toeic/">
   <meta property="twitter:title" content="Peach Toeic 🍑">
   <meta property="twitter:description" content="Ứng dụng chinh phục 600 từ vựng TOEIC thiết yếu nhất miễn phí">
-  <meta property="twitter:image" content="%PUBLIC_URL%/assets/logo.png">
+  <meta property="twitter:image" content="/logo.png">
 
   <title>Peach Toeic</title>
 </head>
