--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Chinh phục 600 từ vựng TOEIC thiết yếu nhất 🍑" />
+  <meta name="description" content="Chinh phục 600 từ vựng TOEIC thiết yếu nhất" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png">
@@ -18,28 +18,28 @@
   <!-- Meta tag -->
   <!-- Primary Meta Tags -->
   <title>Peach Toeic</title>
-  <meta name="title" content="Peach Toeic 🍑">
+  <meta name="title" content="Peach Toeic">
   <meta name="description" content="Ứng dụng chinh phục 600 từ vựng TOEIC thiết yếu nhất miễn phí">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://thanhcanhit.github.io/peach-toeic/">
-  <meta property="og:title" content="Peach Toeic 🍑">
+  <meta property="og:title" content="Peach Toeic">
   <meta property="og:description" content="Ứng dụng chinh phục 600 từ vựng TOEIC thiết yếu nhất miễn phí">
-  <meta property="og:image" content="/logo.png">
+  <meta property="og:image" content="%PUBLIC_URL%/logo.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://thanhcanhit.github.io/peach-toeic/">
-  <meta property="twitter:title" content="Peach Toeic 🍑">
+  <meta property="twitter:title" content="Peach Toeic">
   <meta property="twitter:description" content="Ứng dụng chinh phục 600 từ vựng TOEIC thiết yếu nhất miễn phí">
-  <meta property="twitter:image" content="/logo.png">
+  <meta property="twitter:image" content="%PUBLIC_URL%/logo.png">
 
   <title>Peach Toeic</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Bạn phải cho phép trình duyệt chạy javascript để sử dụng phần mềm này.</noscript>
   <div id="root"></div>
 
 </html>
